# uprooted

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Install-Uprooted.ps1  README.md  Uninstall-Uprooted.ps1  install-uprooted-linux.sh  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
docs/plugins/: ADVANCED_DEVELOPMENT.md  API_REFERENCE.md  BRIDGE_REFERENCE.md  CONTRIBUTING_PLUGINS.md  EXAMPLES.md  GETTING_STARTED.md  ROOT_ENVIRONMENT.md
docs/plugins/builtin/: INDEX.md  link-embeds.md  message-logger.md  rootcord.md  sentry-blocker.md  settings-panel.md  themes.md
hook/: ColorUtils.cs
installer/: package.json
installer/src/: main.ts  starfield.ts
installer/src-tauri/: Cargo.toml
installer/src-tauri/src/: cli.rs  detection.rs  embedded.rs  hook.rs  main.rs  patcher.rs  settings.rs
installer/src/lib/: state.ts  tauri.ts
installer/src/pages/: main.ts  themes.ts
installer/src/styles/: components.css  global.css
packaging/: PKGBUILD
packaging/arch/: PKGBUILD
site/: astro.config.mjs  gen_og.py  package.json
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
src/plugins/link-embeds/: index.ts  providers.ts
src/plugins/sentry-blocker/: index.ts
src/plugins/settings-panel/: index.ts
src/plugins/themes/: forest-green.css  index.ts  themes.json
src/types/: plugin.ts  settings.ts
