[package]
name = "uprooted"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "uprooted"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", default-features = false, features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Console",
] }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
